--- a/style.scss
+++ b/style.scss
@@ -699,7 +699,7 @@ img.banner-img {
         object-fit: cover;
         overflow: hidden;
         height: 30vh;
-        width: 100%;
+        width: 40vh;
         z-index: 1;
     }
     a {
