--- a/style.scss
+++ b/style.scss
@@ -517,6 +517,14 @@ tbody tr:nth-child(odd) th {
   vertical-align: top;
 }
 
+.list-item-mac-description {
+  display: inline-block;
+  padding-right: 0.5em;
+  padding-left: 2.0em;
+  padding-top: 3.0em;
+  vertical-align: top;
+}
+
 .list-post-title img {
   margin-bottom: 0.75em;
   margin-top: 1.25em;
