improved style for better views

--- a/_includes/mac.html
+++ b/_includes/mac.html
@@ -12,8 +12,8 @@
 </div>
 
 <div class="list-item-mac-description">
-    <p style="color:black; font-size:20px;">
-	<b>Assistant Professor</b> <br>
+    <p class = "people-list-info" style="font-size:20px;">
+	<span>Assistant Professor</span> <br>
 	<a class="name" href="https://www.stanford.edu/"> Stanford University </a> <br>
 	<a class="name" href="https://aa.stanford.edu/"> Department of Aeronautics and Astronautics </a> <br>
 	Director of the <a class="name" href="https://msl.stanford.edu/"> Multi-robot Systems Lab (MSL) </a> <br>
