--- a/_layouts/resources.html
+++ b/_layouts/resources.html
@@ -17,13 +17,16 @@ layout: default
    496 Lomita Mall
    <br>
    Stanford, CA 94305
+   <br>
+   Multi-robot-systems-lab@stanford.edu
    </p>
   </div>
+  <hr>
 
   <div class="resources-title">
     <h2>Funding</h2>
   </div>
-  <div class="resources-descrip">
+  <div class="resources-descrip resources-descrip-img">
     {{ content }}
   </div>
 </div>
