--- a/style.scss
+++ b/style.scss
@@ -40,8 +40,8 @@ body {
   font-size: 80%;
 }
 
-a {
-  color: #ccc;
+.project-container a {
+  color: #6b6b6b;
   text-decoration: none;
 
   &:hover,
@@ -558,11 +558,17 @@ tbody tr:nth-child(odd) th {
 
 .funding-img {
   max-height: 200px;
-  max-width: 300px;
-  object-fit: cover;
+  width: 32%;
+  object-fit: contain;
   object-position: center-top;
   display: inline-block;
   padding: 10px 25px 10px 25px
+}
+
+@media (max-width:770px) {
+  .funding-img {
+    width: 49%;
+  }
 }
 
 .page-title {
@@ -946,15 +952,12 @@ ol.bibliography li {
 }
 
 .resources-title {
-  border-radius: 13px;
-  background-color: #8c1515;
-  padding: 1.3rem 1.2rem 0.9rem 1.2rem;
+  padding: 0.9rem 1.2rem 0.9rem 1.2rem;
   margin-bottom: 0.5rem;
-  margin-top: 1.2rem;
+  margin-top: 0.82rem;
 }
 
 .resources-title h2 {
-  color: white;
   font-size: 1.9rem;
 }
 
@@ -970,17 +973,47 @@ ol.bibliography li {
 
 .resources-descrip-info {
   margin: 0 0.6rem;
-  font-size: 0.87rem;
+  font-size: 0.97rem;
+  padding: 0.91rem 3.7rem 0 3.7rem;
+  line-height: 1.8;
+  font-family: serif;
 }
 
-.people-title {
-  background-color: #8c1515;
-  border-radius: 12px;
-  padding: 0.97rem;
-  margin-top: 0.73rem;
+.people-starter {
+  text-align: center;
 }
 
-.people-title h3 {
+.people-starter > p {
+  display: inline-block;
+  margin: 1.4rem auto 2.1rem auto;
+  font-weight: 400;
+  font-size: 1.0rem;
+  font-family: monospace;
+  padding: 2.1rem 1.4rem;
+  border-top: 1.3px solid #eee;
+  border-bottom: 1.3px solid #eee;
+}
+
+.people-starter > i {
+  font-size: 2.9rem;
+  display: block;
+  margin-top: 1.3rem;
+}
+
+.people-title > h3::before {
   margin: 0;
   color: white;
+}
+
+.people-group {
+  border-top: 0.64px solid #eee;
+  border-bottom: 0.64px solid #eee;
+}
+
+.people-list-info > a {
+  color: #515151;
+}
+
+.people-list-info > span {
+  font-weight: 500;
 }
