--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,9 @@
 
 <body id="page-top" class="d-flex flex-column min-vh-100">
     {% include navbar.html %}
+      <div class="container px-0"
         {{ content }}
+      </div>
     {% include footer.html %}
 
 </html>
