added videos tab to navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,11 +21,11 @@
         {% if page.url contains nav.href %}
             <!-- current page is active; set nav class -->
             <li class="nav-item my-0">
-                <a class='nav-link active py-0' href="{{ nav.href }}">{{ nav.name }}</a>
+                <a class='nav-link active py-0' target="{{nav.target}}" href="{{ nav.href }}">{{ nav.name }}</a>
             </li>
         {% else %}
             <li class="nav-item my-0">
-                <a class='nav-link py-0' href="{{ nav.href }}">{{ nav.name }}</a>
+                <a class='nav-link py-0' target="{{nav.target}}" href="{{ nav.href }}">{{ nav.name }}</a>
             </li>
         {% endif %}
       {% endfor %}
