added wiki link to resources page

--- a/_layouts/resources.html
+++ b/_layouts/resources.html
@@ -29,5 +29,9 @@ layout: default
   <div class="resources-descrip resources-descrip-img">
     {{ content }}
   </div>
-</div>
+  <hr>
 
+  <div class="wiki-header">
+    <h2> Lab Wiki <h2>
+    <p class="mb-5 mt-3"> Click <a href="https://sites.google.com/a/stanford.edu/mslwiki/"> here <a/> to go to the MSL Wiki (requires login). </p>
+</div>
