added more features to publication page

--- a/_layouts/bibliography.html
+++ b/_layouts/bibliography.html
@@ -1,4 +1,9 @@
 ---
 layout: default
 ---
-{{ reference }} [<a href="{{links.pdf}}">pdf</a>]
+{{ reference }}
+{% if entry.note %} 
+  {{ entry.note }}
+{% endif %}
+[<a href="{{links.pdf}}">pdf</a>]
+
