--- a/style.scss
+++ b/style.scss
@@ -1031,3 +1031,13 @@ ol.bibliography li {
     max-width: 400px;
   }
 }
+
+.bibtex-head {
+  padding: 1.2rem 0;
+}
+
+.pub-bib {
+  margin-top: -0.84rem;
+  padding: 0.38rem 0;
+  border-top: 1.3px solid #c1c1c1;
+}
