--- a/_includes/position_text.html
+++ b/_includes/position_text.html
@@ -11,8 +11,8 @@
         Principal Investigator
     {% when "undergrad" %}
         Undergraduate Student
-    {% when "affiliate" %}
-        Lab Affiliate
+    {% when "alumni" %}
+        Lab Alumnus
     {% else %}
     ---
 {% endcase %}
