--- a/_layouts/project-page.html
+++ b/_layouts/project-page.html
@@ -2,13 +2,13 @@
 layout: default
 ---
 <div class="container-fluid project-page px-0 mt-2 justify-content-center">
-    <div class="row px-auto">
-        <div class="col-8 col-md-6 col-lg-4 mx-auto pt-4">
-            <img class="img-fluid px-auto"
+    <div class="row px-auto my-auto">
+        <div class="col-8 col-md-6 col-lg-4 mx-auto my-auto py-4 project-header">
+            <img class="img-fluid mx-auto my-auto"
             src="{{site.url}}/images/projects/{{page.image}}" />
         </div>
 
-        <div class="col-10 col-lg-7 mx-auto pt-4">
+        <div class="col-10 col-lg-7 mx-auto pt-lg-4">
             <div class="row text-center pb-2">
                 <h2> {{page.title}} </h2>
             </div>
