--- a/_includes/alumni.html
+++ b/_includes/alumni.html
@@ -8,5 +8,12 @@
         {{person.degree}}
     </p>
 	<hr class="list-post-extra">
-    <p class="list-post-extra">{{person.organization}}</p>
+	<p class="list-post-extra">
+        {{person.university}}, {{person.year}}
+    </p>
+	<!-- 
+	 <hr class="list-post-extra">
+     <p class="list-post-extra">{{person.organization}}</p>
+	-->
+	
 </div>
