--- a/style.scss
+++ b/style.scss
@@ -516,6 +516,7 @@ tbody tr:nth-child(odd) th {
   display: inline-block;
   padding-right: 0.5em;
   padding-left: 0.5em;
+  padding-bottom: 1.5em;
   vertical-align: top;
 }
 
