--- a/style.scss
+++ b/style.scss
@@ -545,7 +545,7 @@ tbody tr:nth-child(odd) th {
   font-size: 16px;
   margin: 0px;
   padding: 0px;
-  max-width: 200px;
+  width: 200px;
 }
 
 .list-detail {
