--- a/style.scss
+++ b/style.scss
@@ -516,6 +516,7 @@ tbody tr:nth-child(odd) th {
   display: inline-block;
   padding-right: 0.5em;
   padding-left: 0.5em;
+  padding-bottom: 1.5em;
   vertical-align: top;
 }
 
@@ -544,7 +545,7 @@ tbody tr:nth-child(odd) th {
   font-size: 16px;
   margin: 0px;
   padding: 0px;
-  max-width: 200px;
+  width: 200px;
 }
 
 .list-detail {
