fixed some relative pathing stuff

--- a/_includes/mac.html
+++ b/_includes/mac.html
@@ -3,7 +3,7 @@
       <a href="https://web.stanford.edu/~schwager/">
         <img
           class="pi-thumbnail"
-          src="{{site.url}}/images/people/macschwager.jpg">
+          src="{{site.baseurl}}/images/people/macschwager.jpg">
       </a>
       <a class="name" href="https://web.stanford.edu/~schwager/">
         <b>Mac Schwager</b>
