--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
     <span class="d-inline-block align-middle w-100">
-        <img src="{{site.url}}/images/projects/msl_herd-4.jpg" style="max-height: 325px; min-width: 100%; margin: 0;" class="img-fluid banner-img my-0" />
+        <img src="{{site.baseurl}}/images/projects/msl_herd-4.jpg" style="max-height: 325px; min-width: 100%; margin: 0;" class="img-fluid banner-img my-0" />
     </span>
 
     <div class="shadow home-masthead justify-content-center w-100">
