--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<link href="{{ site.url }}/css/profile.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/css/profile.css" rel="stylesheet">
 <div class="container-fluid">
   <div class="person-row row">
     <div class="col-sm-4">
-      <img 
+      <img
         class="mx-auto d-block img-fluid"
-        src="{{site.url}}/images/people/{{page.avatar}}"
+        src="{{site.baseurl}}/images/people/{{page.avatar}}"
         alt="{{page.name}}"
         >
     </div>
