--- a/_includes/follow-us.html
+++ b/_includes/follow-us.html
@@ -4,7 +4,7 @@
     <div class="container mt-4">
         <div class="row">
                 <div class="col-10 text-center text-white mx-auto py-1">
-                    <p> Our latest publications can be found <a href="/publications/">here.</a> </p>
+                    <p> Our latest publications can be found <a href="{{site.baseurl}}/publications/">here.</a> </p>
                 </div>
         </div>
         <div class="row">
