--- a/_includes/research-panel.html
+++ b/_includes/research-panel.html
@@ -37,10 +37,10 @@
                                     <div class="d-flex flex-column col-12">
                                         <div class="d-flex flex-column mx-1 my-2 p-2 shadow project-badge badge-panel align-items-center" style="height: 40vh;">
                                             <div class="d-flex ">
-                                                <img class="img-fluid project-badge" src="/images/projects/{{p.image}}" />
+                                                <img class="img-fluid project-badge" src="{{site.baseurl}}/images/projects/{{p.image}}" />
                                             </div>
                                             <div class="d-flex my-auto">
-                                                    <a href="{{site.url}}{{p.url}}">{{p.title}}</a>
+                                                    <a href="{{site.baseurl}}{{p.url}}">{{p.title}}</a>
                                             </div>
                                         </div>
                                     </div>
