--- a/_layouts/project-page.html
+++ b/_layouts/project-page.html
@@ -5,7 +5,7 @@ layout: default
     <div class="row px-auto my-auto">
         <div class="col-8 col-md-6 col-lg-4 mx-auto my-auto py-4 project-header">
             <img class="img-fluid mx-auto my-auto"
-            src="{{site.url}}/images/projects/{{page.image}}" />
+            src="{{site.baseurl}}/images/projects/{{page.image}}" />
         </div>
 
         <div class="col-10 col-lg-7 mx-auto pt-lg-4">
