--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -12,9 +12,10 @@ layout: default
             </div>
         </div>
         <div class="mt-4 row justify-content-center">
-            <div class="col-7">
-                 <p>We are leading the next wave of robotics research from single robots
-                     to multi-robot teams in solving challenging&nbsp;tasks.</p>
+            <div class="col-8">
+                 <p>Endowing groups of robots with the intelligence to
+                    collaborate safely and effectively with humans and
+                    each&nbsp;other.</p>
             </div>
         </div>
     </div>
