--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -20,7 +20,7 @@ layout: default
                 </div>
             </div>
         </div>
-        <div class="col-8 col-md-4 mr-0 mr-md-auto mt-4 mt-md-0 text-justify">
+        <div class="col-8 col-md-6 col-lg-5 mr-0 mr-md-auto mt-4 mt-md-0 text-justify">
             {{ content }}
         </div>
     </div>
